--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -16,19 +16,19 @@
 <body>
   <header>
     <nav class="navbar">
-        <a href="../index.html" class="navHome">Lucas Daniel Romeo</a>
-        <ul class="navMenu">
-            <li class="navItem">
-                <a href="./SobreMi.html" class="navLink">Sobre Mi</a>
+        <a href="../index.html" class="nav-home">Lucas Daniel Romeo</a>
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <a href="./SobreMi.html" class="nav-link">Sobre Mi</a>
             </li>
-            <li class="navItem">
-                <a href="#" class="navLink">Estudios</a>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Estudios</a>
             </li>
-            <li class="navItem">
-                <a href="./Experiencias.html" class="navLink">Experiencias</a>
+            <li class="nav-item">
+                <a href="./Experiencias.html" class="nav-link">Experiencias</a>
             </li>
-            <li class="navItem">
-                <a href="./Habilidades.html" class="navLink">Habilidades</a>
+            <li class="nav-item">
+                <a href="./Habilidades.html" class="nav-link">Habilidades</a>
             </li>
         </ul>
         <div class="hamburger">
@@ -36,23 +36,6 @@
             <span class="bar"></span>
             <span class="bar"></span>
         </div>
-        <!-- <ul class="estilo">
-            <li class="home">
-                <a href="../index.html">Lucas Daniel Romeo</a>
-            </li>
-            <li>
-                <a href="./SobreMi.html">Sobre Mi</a>
-            </li>
-            <li>
-                <a href="#">Estudios</a>
-            </li>
-            <li>
-                <a href="./Experiencias.html">Experiencias</a>
-            </li>
-            <li>
-                <a href="./Habilidades.html">Habilidades</a>
-            </li>
-        </ul> -->
     </nav>
   </header>
   <div class="area" >
