--- a/Pages/Habilidades.html
+++ b/Pages/Habilidades.html
@@ -10,29 +10,34 @@
     <link rel="stylesheet" href="../Css/reset.css">
     <link rel="stylesheet" href="../Css/fondo.css">
     <link rel="stylesheet" href="../Css/habilidades.css">
-    <script src="../Javascript/index.js"></script>
+    <script src="../Javascript/index.js" defer></script>
     <title>Habilidades</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul class="estilo">
-                <li class="home">
-                    <a href="../index.html">Lucas Daniel Romeo</a>
-                </li>
-                <li>
-                    <a href="./SobreMi.html">Sobre Mi</a>
-                </li>
-                <li>
-                    <a href="./Estudios.html">Estudios</a>
-                </li>
-                <li>
-                    <a href="./Experiencias.html">Experiencias</a>
-                </li>
-                <li>
-                    <a href="#">Habilidades</a>
-                </li>
-            </ul>
+            <nav class="navbar">
+                <a href="../index.html" class="nav-home">Lucas Daniel Romeo</a>
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="./SobreMi.html" class="nav-link">Sobre Mi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./Estudios.html" class="nav-link">Estudios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./Experiencias.html" class="nav-link">Experiencias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Habilidades</a>
+                    </li>
+                </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </nav>
         </nav>
     </header>
 
