--- a/index.html
+++ b/index.html
@@ -11,28 +11,34 @@
     <link rel="stylesheet" href="./Css/fondo.css">
     <link rel="stylesheet" href="Css/index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-    <script src="./js/index.js" defer></script>
+    <script src="./Javascript/index.js" defer></script>
     <title>Lucas Daniel Romeo</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul class="estilo ">
-                <li>
-                    <a href="./Pages/SobreMi.html">Sobre Mi</a>
-                </li>
-                <li>
-                    <a href="./Pages/Estudios.html">Estudios</a>
-                </li>
-                <li>
-                    <a href="./Pages/Experiencias.html">Experiencias</a>
-                </li>
-                <li>
-                    <a href="./Pages/Habilidades.html">Habilidades</a>
-                </li>
-            </ul>
-        </nav>
+            <nav class="navbar">
+                <a href="#" class="nav-home">Lucas Daniel Romeo</a>
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="./Pages/SobreMi.html" class="nav-link">Sobre Mi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./Pages/Estudios.html" class="nav-link">Estudios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./Pages/Experiencias.html" class="nav-link">Experiencias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./Pages/Habilidades.html" class="nav-link">Habilidades</a>
+                    </li>
+                </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </nav>
     </header>
 
     <main class="estiloPrin">
