--- a/Pages/Estudios.html
+++ b/Pages/Estudios.html
@@ -10,30 +10,32 @@
     <link rel="stylesheet" href="../Css/reset.css">
     <link rel="stylesheet" href="../Css/fondo.css">
     <link rel="stylesheet" href="../Css/estudios.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="./js/index.js" defer></script>
+     <script src="../Javascript/index.js" defer></script>
     <title>Estudios</title>
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="estilo">
-                <li class="home">
-                    <a href="../index.html">Lucas Daniel Romeo</a>
+        <nav class="navbar">
+            <a href="../index.html" class="nav-home">Lucas Daniel Romeo</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="./SobreMi.html" class="nav-link">Sobre Mi</a>
                 </li>
-                <li>
-                    <a href="./SobreMi.html">Sobre Mi</a>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Estudios</a>
                 </li>
-                <li>
-                    <a href="#">Estudios</a>
+                <li class="nav-item">
+                    <a href="./Experiencias.html" class="nav-link">Experiencias</a>
                 </li>
-                <li>
-                    <a href="./Experiencias.html">Experiencias</a>
-                </li>
-                <li>
-                    <a href="./Habilidades.html">Habilidades</a>
+                <li class="nav-item">
+                    <a href="./Habilidades.html" class="nav-link">Habilidades</a>
                 </li>
             </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
     </header>
 
