--- a/Pages/SobreMi.html
+++ b/Pages/SobreMi.html
@@ -10,30 +10,34 @@
     <link rel="stylesheet" href="../Css/reset.css">
     <link rel="stylesheet" href="../Css/fondo.css">
     <link rel="stylesheet" href="../Css/sobremi.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="./js/index.js" defer></script>
     <title>Sobre Mi</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul class="estilo">
-                <li class="home">
-                    <a href="../index.html">Lucas Daniel Romeo</a>
-                </li>
-                <li>
-                    <a href="#">Sobre Mi</a>
-                </li>
-                <li>
-                    <a href="./Estudios.html">Estudios</a>
-                </li>
-                <li>
-                    <a href="./Experiencias.html">Experiencias</a>
-                </li>
-                <li>
-                    <a href="./Habilidades.html">Habilidades</a>
-                </li>
-            </ul>
+            <nav class="navbar">
+                <a href="../index.html" class="nav-home">Lucas Daniel Romeo</a>
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Sobre Mi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./Estudios.html" class="nav-link">Estudios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./Experiencias.html" class="nav-link">Experiencias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./Habilidades.html" class="nav-link">Habilidades</a>
+                    </li>
+                </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </nav>
         </nav>
     </header>
 
