--- a/Pages/SobreMi.html
+++ b/Pages/SobreMi.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../Css/reset.css">
     <link rel="stylesheet" href="../Css/fondo.css">
     <link rel="stylesheet" href="../Css/sobremi.css">
-    <script src="./js/index.js" defer></script>
+    <script src="../Javascript/index.js" defer></script>
     <title>Sobre Mi</title>
 </head>
 <body>
@@ -59,25 +59,25 @@
         </div >
 
             <!-- Titulo principal -->
-        <ul class="contenedor">
+        <ul class="contenedor ">
             <li class="contenedorItem">
-                <h1>Sobre Mi</h1>
+                <h1 class="titulos">Sobre Mi</h1>
                 <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus maiores optio provident nemo ea consectetur omnis repudiandae, impedit delectus nisi a, commodi neque fugiat dolorem blanditiis voluptatibus voluptatem adipisci dolores.</p>
             </li>
             <li class="contenedorItem">
-                <h1>Objetivos</h1>
+                <h1 class="titulos">Objetivos</h1>
                 <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum minima architecto excepturi doloremque in odio sequi, exercitationem et ipsum sint vel. Rerum consequuntur ea natus consectetur, autem porro libero excepturi?</p>
             </li>
             <li class="contenedorItem3">
-                <h1>Motivaciones</h1>
+                <h1 class="titulos">Motivaciones</h1>
                 <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, cupiditate temporibus officia ut libero facere veritatis suscipit eligendi nobis optio fugit cumque maiores alias commodi! Non adipisci repellat illum aliquam.</p>
             </li>
             <li class="contenedorItem">
-                <h1>Personalidad</h1>
+                <h1 class="titulos">Personalidad</h1>
                 <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit sunt dolore amet excepturi? Architecto minus itaque nihil! Odit dicta accusantium fuga animi impedit quas. Repudiandae sed excepturi cupiditate quis.</p>
             </li>
             <li class="contenedorItem">
-                <h1>Frustaciones</h1>
+                <h1 class="titulos">Frustaciones</h1>
                 <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione necessitatibus tempore aliquam? Delectus, quam in ea earum, culpa odio minima tempore voluptatum laudantium vero quisquam voluptatem quod, aliquid aspernatur temporibus.</p>
             </li>
         </ul>
